objects/CRMforNonProfit__Certificate_Sending_Status__c.object
<CustomObject>
    <description>Object with stored data about sent certificates</description>
    <fields>
        <fullName>CRMforNonProfit__Certificates_Sent__c</fullName>
        <description>Number of certificates already sent.</description>
        <inlineHelpText>Number of certificates already sent.</inlineHelpText>
        <label>Certificates Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Email_Template_Id__c</fullName>
        <label>Email Template Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__From_Address_Id__c</fullName>
        <label>From Address Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__GroupQuery__c</fullName>
        <description>SOQL that determines the contacts of the group</description>
        <label>Group Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Group__c</fullName>
        <description>A group to which certificates are send.</description>
        <inlineHelpText>A group to which certificates are send.</inlineHelpText>
        <label>Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Last_Email_Sent__c</fullName>
        <label>Last Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Listview_Id__c</fullName>
        <label>Listview Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__PDF_Template_Id__c</fullName>
        <label>PDF Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Sent_Today__c</fullName>
        <description>How many emails with certificates have been sent on the date stored in the Last Email Sent field</description>
        <label>Sent on Last Email Sent Date</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Status__c</fullName>
        <inlineHelpText>Status of sending.
In Preparation - job is preparing data
In Queue - job is waiting for another job to finish
Sending - certificates are being send
Complete for Today - We have reached limit of emails send
Complete - job is completed</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Preparation</fullName>
                </value>
                <value>
                    <fullName>In Queue</fullName>
                </value>
                <value>
                    <fullName>Sending</fullName>
                </value>
                <value>
                    <fullName>Complete for Today</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Total_Certificates_to_be_Send__c</fullName>
        <description>Number of certificates to be totally send by certificate sender.</description>
        <inlineHelpText>Number of certificates to be totally send by certificate sender.</inlineHelpText>
        <label>Total Certificates to be Send</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Year__c</fullName>
        <description>Year for which certificates are send.</description>
        <inlineHelpText>Year for which certificates are send.</inlineHelpText>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Certificate Sending Status</label>
    <listViews>
        <fullName>CRMforNonProfit__All</fullName>
        <columns>NAME</columns>
        <columns>CRMforNonProfit__Certificates_Sent__c</columns>
        <columns>CRMforNonProfit__Email_Template_Id__c</columns>
        <columns>CRMforNonProfit__Group__c</columns>
        <columns>CRMforNonProfit__Last_Email_Sent__c</columns>
        <columns>CRMforNonProfit__PDF_Template_Id__c</columns>
        <columns>CRMforNonProfit__Status__c</columns>
        <columns>CRMforNonProfit__Total_Certificates_to_be_Send__c</columns>
        <columns>CRMforNonProfit__Year__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CSS - {000000000}</displayFormat>
        <label>CampaignSendingStatus Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificate Sending Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>